2017-12-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.7.4.
	* version.ac: Adjusted.

2017-12-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.7.3.
	* version.ac: Adjusted.

2017-12-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.7.2.
	* version.ac: Adjusted.

2017-11-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.7.1.
	* version.ac: Adjusted.

2017-11-14  Karl Berry  <karl@tug.org>

	* configure.ac (KPSE_BASIC): pass Automake option no-define
	to stop the #define of VERSION (and PACKAGE), which harfbuzz
	and/or C++ is apparently now using for its own incompatible purposes.
	* config.h.in (PACKAGE, VERSION): hence auto-removed (by aclocal).

2017-11-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.7.0.
	* Makefile.am, version.ac: Adjusted.

2017-10-31  Karl Berry  <karl@freefriends.org>

	* configure.ac: update AC_CHECK_FUNCS and AC_CHECK_HEADERS
	for 1.6.3.
	(CXXFLAGS): merge gcc additions from distribution source,
	most notably including -std=c++11.
	(HAVE_GCC): new conditional, also from dist source.

2017-10-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.6.3.
	* version.ac: Adjusted.
	Note that c++11 is required from the version 1.6.1. Works for
	the c++11 configuration are not yet done.

2017-10-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.6.2.
	* version.ac: Adjusted.
	Note that c++11 is required from the version 1.6.1. Works for
	the c++11 configuration are not yet done.

2017-10-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.6.1.
	* Makefile.am, version.ac: Adjusted.

2017-10-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.6.0.
	* version.ac: Adjusted.

2017-09-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.5.1.
	* version.ac: Adjusted.

2017-08-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.5.0.
	* version.ac: Adjusted.

2017-08-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
