@@ -1,3 +1,8 @@
+2017-12-26  Karl Berry  <karl@tug.org>
+
+	* configure.ac (CXXFLAGS): add -D_GNU_SOURCE.
+	From Ken Brown, tlbuild mail 26 Dec 2017 11:09:01.
+
 2017-12-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	Import harfbuzz-1.7.4.
